--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   flutter_svg: ^1.1.6
+  dio: ^4.0.6
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
