--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter_svg: ^1.1.6
   dio: ^4.0.6
   flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
+  shimmer: ^2.0.0
+  cached_network_image: ^3.2.2
 
 dev_dependencies:
   flutter_test:
