--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,15 @@ dependencies:
   equatable: ^2.0.5
   shimmer: ^2.0.0
   cached_network_image: ^3.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.0
 
 flutter:
 
