--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   cached_network_image: ^3.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  google_maps_flutter: ^2.2.1
 
 
 dev_dependencies:
